# luxdev_assignment_12

./: .gitignore  README.md  pyproject.toml
notebooks/: comprehensions_QA.ipynb
