[project]
name = "luxdev-assignment-12"
version = "0.1.0"
description = "Use of list, dictionary, and nested comprehensions to transform data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
